update 5 files, create 5 files, delete 4 files and move 2 files

--- a/.env.dummy
+++ b/.env.dummy
@@ -1,2 +1,5 @@
 # .env の設定例
+# [student] には、PostgreSQL のユーザ名を指定してください。
+# [secret123] には、PostgreSQL のパスワードを指定してください。
+# [playground] には、PostgreSQL のデータベース名を指定してください。
 DATABASE_URL="postgresql://student:secret123@localhost:5432/playground?schema=public"
