--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*.ts", "from-teacher/**/*.ts"],
+  "include": ["src/**/*.ts", "from-teacher/**/*.ts", "private/**/*.ts"],
   "exclude": ["node_modules"]
 }
