update 1 file and create 15 files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
   "cSpell.words": [
     "autoincrement",
+    "backline",
     "dbgate",
+    "debuff",
     "fuga",
     "Gomi",
     "hameln",
